2026-02-04T01:18:53Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/21654504489 # 867
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-04
* notice: last 14d: unq all: 8 9
* notice: prev accum: outdated-unq outdated-all / unq all: 436 610 / 445 620
* notice: next accum: outdated-unq outdated-all / unq all: 436 610 / 444 619
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [] / []

2026-02-03T01:23:01Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/21612960003 # 866
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-03
* notice: last 14d: unq all: 9 10
* notice: prev accum: outdated-unq outdated-all / unq all: 433 607 / 441 616
* notice: next accum: outdated-unq outdated-all / unq all: 436 610 / 445 620
* notice: prev exec diff / last date diff / accum: unq all: +4 +4 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2026-01-15 2026-01-16 2026-01-17 2026-01-18] / [2026-01-29 2026-01-30 2026-01-31 2026-02-01]

2026-01-31T01:15:24Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/21536185033 # 863
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-31
* notice: last 14d: unq all: 8 9
* notice: prev accum: outdated-unq outdated-all / unq all: 433 607 / 441 616
* notice: next accum: outdated-unq outdated-all / unq all: 433 607 / 441 616
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-14] / []

2026-01-30T01:18:29Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/21500868762 # 862